--- a/src/docs/Data_Wrangling/Data_cleaning.ipynb
+++ b/src/docs/Data_Wrangling/Data_cleaning.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/OmdenaAI/munich-chapter-credit-card-fraud/blob/main/src/docs/Data_Wrangling/Data_cleaning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "### **1. Importing Liabraries**"
       ],
@@ -32,11 +42,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "1WUfJZhQj3OY",
-        "outputId": "83869cb8-02d1-4523-de8d-c4a57bbab6b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1WUfJZhQj3OY",
+        "outputId": "83869cb8-02d1-4523-de8d-c4a57bbab6b4"
       },
       "execution_count": 5,
       "outputs": [
@@ -856,11 +866,11 @@
         "# Both Datasets have same column names"
       ],
       "metadata": {
-        "id": "zPcqO7iQkXkU",
-        "outputId": "b1faf06f-f407-47fd-f67b-442b1cb147ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zPcqO7iQkXkU",
+        "outputId": "b1faf06f-f407-47fd-f67b-442b1cb147ac"
       },
       "execution_count": 13,
       "outputs": [
@@ -894,11 +904,11 @@
         "print(\"Ratio of Test dataset : \" ,ratio_of_test_data , ' % ')"
       ],
       "metadata": {
-        "id": "yON0vIcVkX55",
-        "outputId": "6c4f2d55-9d24-42dc-db79-429fa57b9bd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yON0vIcVkX55",
+        "outputId": "6c4f2d55-9d24-42dc-db79-429fa57b9bd8"
       },
       "execution_count": 14,
       "outputs": [
@@ -959,11 +969,11 @@
         "data.shape\n"
       ],
       "metadata": {
-        "id": "jRXZ1ym4kYAo",
-        "outputId": "e7ccec0c-70b7-4abb-c8b6-487e4f671753",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jRXZ1ym4kYAo",
+        "outputId": "e7ccec0c-70b7-4abb-c8b6-487e4f671753"
       },
       "execution_count": 16,
       "outputs": [
@@ -985,12 +995,12 @@
         "data.tail()"
       ],
       "metadata": {
-        "id": "crz6BUkhmQ0_",
-        "outputId": "dbb0f74f-d3e4-4eee-bef7-6924fcca1131",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
-        }
+        },
+        "id": "crz6BUkhmQ0_",
+        "outputId": "dbb0f74f-d3e4-4eee-bef7-6924fcca1131"
       },
       "execution_count": 17,
       "outputs": [
@@ -1381,11 +1391,11 @@
         "# Data has 1852394 rows and 24 columns"
       ],
       "metadata": {
-        "id": "AGflfQtzmZVH",
-        "outputId": "7e9687ae-d123-43fb-cd7a-3e6b78d28227",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AGflfQtzmZVH",
+        "outputId": "7e9687ae-d123-43fb-cd7a-3e6b78d28227"
       },
       "execution_count": 18,
       "outputs": [
@@ -1408,11 +1418,11 @@
         "data.dtypes"
       ],
       "metadata": {
-        "id": "42e_DV9Cml4Y",
-        "outputId": "fbe937a1-e645-48fa-a977-ef30707655e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "42e_DV9Cml4Y",
+        "outputId": "fbe937a1-e645-48fa-a977-ef30707655e9"
       },
       "execution_count": 19,
       "outputs": [
@@ -1460,11 +1470,11 @@
         "# Great ,Fortunately we have no missing values in the dataset"
       ],
       "metadata": {
-        "id": "Rhk2LJMcmsDz",
-        "outputId": "0c7b4d22-ec02-4dde-fc64-f9e3615ed4f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Rhk2LJMcmsDz",
+        "outputId": "0c7b4d22-ec02-4dde-fc64-f9e3615ed4f0"
       },
       "execution_count": 20,
       "outputs": [
@@ -1513,11 +1523,11 @@
         "# we found out that there is no duplicate values in the dataset"
       ],
       "metadata": {
-        "id": "71CKQoTCm1UJ",
-        "outputId": "a2791c0c-e273-4de3-a077-59ff2eb76b07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "71CKQoTCm1UJ",
+        "outputId": "a2791c0c-e273-4de3-a077-59ff2eb76b07"
       },
       "execution_count": 21,
       "outputs": [
@@ -1541,12 +1551,12 @@
         "data.describe()"
       ],
       "metadata": {
-        "id": "4F9Nb-mGm5IZ",
-        "outputId": "19c830ae-6f0f-4775-c515-27f412a90db9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "4F9Nb-mGm5IZ",
+        "outputId": "19c830ae-6f0f-4775-c515-27f412a90db9"
       },
       "execution_count": 22,
       "outputs": [
@@ -1865,6 +1875,250 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **5.2. TypeCasting the Columns**"
+      ],
+      "metadata": {
+        "id": "RL4C4fCJnGN3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We need to Type cast the columns wherever need."
+      ],
+      "metadata": {
+        "id": "HcuO-KGwnGaf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['trans_date_trans_time']=pd.to_datetime(data['trans_date_trans_time'])\n",
+        "data['dob']=pd.to_datetime(data['dob'])\n",
+        "data.dtypes\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LNryDpWJnMgc",
+        "outputId": "0374fbf9-6ca2-49ca-a943-3112d4a706a5"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "trans_date_trans_time    datetime64[ns]\n",
+              "cc_num                            int64\n",
+              "merchant                         object\n",
+              "category                         object\n",
+              "amt                             float64\n",
+              "first                            object\n",
+              "last                             object\n",
+              "gender                           object\n",
+              "street                           object\n",
+              "city                             object\n",
+              "state                            object\n",
+              "zip                               int64\n",
+              "lat                             float64\n",
+              "long                            float64\n",
+              "city_pop                          int64\n",
+              "job                              object\n",
+              "dob                      datetime64[ns]\n",
+              "trans_num                        object\n",
+              "unix_time                         int64\n",
+              "merch_lat                       float64\n",
+              "merch_long                      float64\n",
+              "is_fraud                          int64\n",
+              "label                            object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **5.3. Unique Values in the columns of the Dataset**"
+      ],
+      "metadata": {
+        "id": "oJxJIy--nV9f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Unique values in the whole dataset\n",
+        "\n",
+        "for column_name in data.columns:\n",
+        "    print(column_name ,' : ',len(data[column_name].unique()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KksY6ZPznYSX",
+        "outputId": "9042d0cd-ab0a-4046-8d8d-03b4b02ea792"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "trans_date_trans_time  :  1819551\n",
+            "cc_num  :  999\n",
+            "merchant  :  693\n",
+            "category  :  14\n",
+            "amt  :  60616\n",
+            "first  :  355\n",
+            "last  :  486\n",
+            "gender  :  2\n",
+            "street  :  999\n",
+            "city  :  906\n",
+            "state  :  51\n",
+            "zip  :  985\n",
+            "lat  :  983\n",
+            "long  :  983\n",
+            "city_pop  :  891\n",
+            "job  :  497\n",
+            "dob  :  984\n",
+            "trans_num  :  1852394\n",
+            "unix_time  :  1819583\n",
+            "merch_lat  :  1754157\n",
+            "merch_long  :  1809753\n",
+            "is_fraud  :  2\n",
+            "label  :  2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Unique value of the columns having Object datatype\n",
+        "\n",
+        "data_object_columns=data.select_dtypes(include = 'object').columns\n",
+        "data[data_object_columns].nunique().sort_values()\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9KNA0SsanhJ6",
+        "outputId": "d30d7c44-7851-4c2b-ecc7-21b60a255007"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "gender             2\n",
+              "label              2\n",
+              "category          14\n",
+              "state             51\n",
+              "first            355\n",
+              "last             486\n",
+              "job              497\n",
+              "merchant         693\n",
+              "city             906\n",
+              "street           999\n",
+              "trans_num    1852394\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **6. Saving Data**"
+      ],
+      "metadata": {
+        "id": "IDxkLYzwnqc9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# save the data to a new csv file\n",
+        "data.to_csv(\"../data/clean_data.csv\")"
+      ],
+      "metadata": {
+        "id": "zKeUoXrfnplL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **7. Summary Statement**"
+      ],
+      "metadata": {
+        "id": "ochnJPuXn2KF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Originally we have Two datasets **Train** and **Test** having following rows and columns.\n",
+        "\n",
+        "    - Train Dataset : 1296675x23\n",
+        "    - Test Dataset : 555719x23\n",
+        "\n",
+        "    and by combining we have **1852394** number of Rows and **23** number of columns now in the DATASET.\n",
+        "    and dataset ratio is\n",
+        "    \n",
+        "    -  Ratio of Train dataset :  70.0  %\n",
+        "    -  Ratio of Test dataset :  30.0  %    \n",
+        "      \n",
+        "    \n",
+        "2. We found out that Dataset is **highly Imbalanced** because 99.4% of data is **Genuine** and only 0.52% of data is **Fraud**\n",
+        "\n",
+        "3. We deleted 1 duplicate column name **Unnamed:0** and added two columns name **label** (having the information regarding which dataset is this row belongs to)\n",
+        "   and **age** column.\n",
+        "\n",
+        "4. Fortunately we dont have any duplicate rows and missing values in the dataset.\n",
+        "\n",
+        "5. We found out that Highest Fraud detected in **grocery_pos** category\n",
+        "\n",
+        "6. We figured out that Highest Fraud detected in **NewYork** state\n",
+        "\n",
+        "7. We can see that Fraudulent Transactions are **equally distributed** in **Male** and **Female**\n",
+        "\n",
+        "8. We also see that Mostly Frauds are detected in age range between 35-55\n",
+        "\n",
+        "9. We also found out that our Target variable is **\"is_fraud\"**\n",
+        "\n",
+        "10. In the last there are 1852394 rows and 24 columns left in the DATASET"
+      ],
+      "metadata": {
+        "id": "S7Zt8vxcoDBJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SxgYfDBaoKYv"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1874,7 +2128,8 @@
     "orig_nbformat": 4,
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
