--- a/src/docs/Data_Wrangling/Data_cleaning.ipynb
+++ b/src/docs/Data_Wrangling/Data_cleaning.ipynb
@@ -2056,12 +2056,12 @@
       "cell_type": "code",
       "source": [
         "# save the data to a new csv file\n",
-        "data.to_csv(\"../data/clean_data.csv\")"
+        "data.to_csv(\"/content/drive/MyDrive/Colab Notebooks/clean_data.csv\")"
       ],
       "metadata": {
         "id": "zKeUoXrfnplL"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
