--- a/src/docs/Data_Wrangling/Data_cleaning.ipynb
+++ b/src/docs/Data_Wrangling/Data_cleaning.ipynb
@@ -3922,7 +3922,7 @@
         "    \n",
         "2. We found out that Dataset is **highly Imbalanced** because 99.4% of data is **Genuine** and only 0.52% of data is **Fraud**\n",
         "\n",
-        "3. We deleted 1 duplicate column name **Unnamed:0** and added two columns name **label** (having the information regarding which dataset is this row belongs to)\n",
+        "3. We added two columns name **label** (having the information regarding which dataset is this row belongs to)\n",
         "   and **age** column.\n",
         "\n",
         "4. Fortunately we dont have any duplicate rows and missing values in the dataset.\n",
